--- a/tmux.d/tmux.conf
+++ b/tmux.d/tmux.conf
@@ -45,7 +45,7 @@ bind -r C-Left select-pane -t {left}
 bind -r C-R rotate-window 
 bind -r C-Right select-pane -t {right}
 bind -r C-Up select-pane -t {top}
-bind -r C-r rotate-window 
+bind -r C-r rotate-window
 bind -r Down select-pane -t {down-of}
 bind -r Left select-pane -t {left-of}
 bind -r Right select-pane -t {right-of}
@@ -65,7 +65,6 @@ bind F3 choose-client
 bind F4 choose-session
 bind F5 choose-tree
 bind F6 choose-window
-bind L pipe-pane -o "cat >>~/session-logs/
 bind M display "Monitoring" \; switch-client -T monitor
 bind P paste-buffer
 bind R display "Resize" \; switch-client -T resize
@@ -88,7 +87,7 @@ bind | split-window -h
 set-option -g base-index 1
 set-option -g bell-action any
 set-option -g buffer-limit 8
-set-option -g default-command 'exec /usr/local/bin/zsh -o login'
+set-option -g default-command 'exec /usr/bin/zsh -o login'
 set-option -g default-terminal 'screen-256color'
 set-option -g destroy-unattached off
 set-option -g detach-on-destroy on
@@ -118,7 +117,6 @@ set-option -g prefix2 C-b
 set-option -g repeat-time 2500
 set-option -g set-clipboard on
 set-option -g set-titles on
-set-option -g set-titles-string '
 set-option -g status "on"
 set-option -g status on
 set-option -g status-attr "none"
@@ -129,12 +127,10 @@ set-option -g status-interval 60
 set-option -g status-justify "left"
 set-option -g status-justify left
 set-option -g status-keys vi
-set-option -g status-left "
 set-option -g status-left-attr "none"
 set-option -g status-left-bg black
 set-option -g status-left-fg white
 set-option -g status-left-length "100"
-set-option -g status-right "
 set-option -g status-right-attr "none"
 set-option -g status-right-bg black
 set-option -g status-right-fg white
@@ -160,15 +156,10 @@ set-window-option -g window-status-bell-bg white
 set-window-option -g window-status-bell-fg brightred
 set-window-option -g window-status-bg "colour235"
 set-window-option -g window-status-bg brightmagenta
-set-window-option -g window-status-content-attr default
-set-window-option -g window-status-content-bg white
-set-window-option -g window-status-content-fg brightred
 set-window-option -g window-status-current-bg white
 set-window-option -g window-status-current-fg brightmagenta 
-set-window-option -g window-status-current-format "
 set-window-option -g window-status-fg "colour240"
 set-window-option -g window-status-fg white 
-set-window-option -g window-status-format "
 set-window-option -g window-status-separator ""
 unbind & 
 unbind C-b
