Aligned rpi and linux, search fixed

--- a/vim.d/Makefile
+++ b/vim.d/Makefile
@@ -1,10 +1,6 @@
 
 SHELL         = zsh
 
-OBSOLETES     = ~/.vimbackup ~/.viminfo ~/.vimswap
-OBSOLETES    += ~/.vimundo ~/.vimviews
-#RELOCATED     = ~/.vim/.vimbackup ~/.vim/.viminfo ~/.vim/.vimswap
-#RELOCATED    += ~/.vim/.vimundo ~/.vim/.vimviews
 GITRPO        = https://github.com/spf13/spf13-vim.git
 LOCALS        = vimrc.before.local
 LOCALS       += vimrc.bundles.local
@@ -12,59 +8,42 @@ LOCALS       += vimrc.local
 TARGETS       = ~/.vimrc.before.local
 TARGETS      += ~/.vimrc.bundles.local
 TARGETS      += ~/.vimrc.local
-SPFDIR        = ~/.spf13-vim
+SPFDIR        = ~/.spf13-vim-3
 INSTALL       = install
 INSTALL_DATA  = $(INSTALL) -m 664
 VIMCMD        = vim +BundleInstall! +BundleClean +q
 VIMDIR        = $(ZDOTDIR)/vim.d
 
-.PHONY: install symlink relocate reinstate
-.PHONY: clean realclean dotvim spf-install
+.PHONY: install
+.PHONY: clean realclean spf-install
 .PHONY: changes gitcommit
 
-install: $(TARGETS) spf-install
+default: install
 
-spf-install                                       : ~/.spf13-vim
+install:: $(TARGETS)
+install:: .spf-install
 
-ifeq "$(MAKECMDGOALS)" "changes"
-changes: gitcommit .changed-makefile
+.spf-install: .spf
 
-.changed-makefile: Makefile
-	git add $<
-	touch .changed-makefile
-
-$(LOCALS): %.local : ~/.%.local
-	cp -afv $< $@
-	git add $@
-
-gitcommit: $(LOCALS) | .changed-makefile
-	git commit -m "Changes from $$(date +%Y%m%d)"
-	git fetch
-else
-~/.%                                              : $(LOCALS)
+~/.%: $(LOCALS) | ~/.vim
 	$(INSTALL_DATA) $* $@
-endif
 
-relocate                                          : $(RELOCATED) | dotvim
-
-dotvim                                            : ~/.vim
-
-realclean                                         : clean
+realclean: clean
 	rm -rfv ~/.spf13-vim
 
-clean                                             :
+clean:
 	rm -rfv $(TARGETS)
 
-uninstall                                         :
+uninstall:
 	rm -rfv ~/.vim
 	[[ -d backups ]] && cp -Rav backups /** ~ || print "No backup found"
-
-~/.vim/%                                          : $(OBSOLETES)
-	mv -v $* $@
 
 ~/.vim:
 	mkdir $@
 
-~/.spf13-vim:
+.spf: | ~/.spf13-vim-3
+	touch $@
+
+~/.spf13-vim-3:
 	-git clone --recursive $(GITRPO) $(SPFDIR)
 	cd $(HOME) && bash $(SPFDIR)/bootstrap.sh
