fix minor regressions

--- a/.gitignore
+++ b/.gitignore
@@ -4,23 +4,25 @@
 *.zwc
 *.zwc.*
 *~
-.revolver
+.p10k
 .p10k.zsh
+.revolver
+.zaw
+.zaw
 .zcomp*
 .zhistory
 .zlogin
 .zlogout
-.zaw
 .zprezto
 .zpreztorc
 .zprofile
-.zaw
-allpix
-typescript
+.zshenv
 .zshrc
 Xresources-e
+allpix
 awkprof.out
 buildlog
 example*
 logs.d
+typescript
 zsticky
